--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,18 +3,11 @@
   "editor.formatOnSave": false,
   "editor.formatOnType": false,
   "eslint.enable": true,
-  "eslint.autoFixOnSave": true,
   "eslint.validate": [
     "javascript",
     "javascriptreact",
-    {
-      "autoFix": true,
-      "language": "typescript"
-    },
-    {
-      "autoFix": true,
-      "language": "typescriptreact"
-    }
+    "typescript",
+     "typescriptreact"
   ],
   "typescriptHero.imports.stringQuoteStyle": "'",
   "typescript.preferences.quoteStyle": "single",
@@ -39,5 +32,8 @@
   },
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescriptHero.imports.organizeOnSave": true,
-  "typescriptHero.imports.multiLineTrailingComma": false
+  "typescriptHero.imports.multiLineTrailingComma": false,
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  }
 }
