--- a/package.json
+++ b/package.json
@@ -20,69 +20,73 @@
   },
   "dependencies": {
     "@react-form-fields/native-base": "2.6.7",
-    "@react-native-community/async-storage": "1.6.3",
-    "@react-native-community/netinfo": "4.6.1",
-    "@sentry/react-native": "1.1.0",
-    "react-native-dotenv": "0.2.0",
-    "axios": "0.19.0",
+    "@react-native-community/async-storage": "1.9.0",
+    "@react-native-community/masked-view": "0.1.9",
+    "@react-native-community/netinfo": "5.7.1",
+    "@react-navigation/native": "5.1.6",
+    "@react-navigation/stack": "5.2.11",
+    "@sentry/react-native": "1.3.7",
+    "axios": "0.19.2",
     "base-64": "0.1.0",
-    "date-fns": "2.8.1",
+    "date-fns": "2.12.0",
+    "formik": "2.1.4",
     "lodash": "4.17.15",
-    "native-base": "2.13.8",
-    "react": "16.12.0",
-    "react-native": "0.61.5",
+    "native-base": "2.13.12",
+    "react": "16.13.1",
+    "react-native": "0.62.2",
     "react-native-animatable": "1.3.3",
-    "react-native-device-info": "5.3.1",
+    "react-native-device-info": "5.5.5",
+    "react-native-dotenv": "0.2.0",
+    "react-native-elements": "1.2.7",
     "react-native-exception-handler": "2.10.8",
-    "react-native-firebase": "5.5.6",
-    "react-native-gesture-handler": "1.5.2",
-    "react-native-reanimated": "1.4.0",
-    "react-native-restart": "0.0.13",
+    "react-native-firebase": "5.6.0",
+    "react-native-gesture-handler": "1.6.1",
+    "react-native-reanimated": "1.8.0",
+    "react-native-restart": "0.0.14",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "2.5.0",
     "react-native-splash-screen": "3.2.0",
     "react-native-vector-icons": "6.6.0",
-    "react-navigation": "4.0.10",
-    "react-navigation-drawer": "2.3.3",
-    "react-navigation-stack": "1.10.3",
-    "react-navigation-transitions": "1.0.12",
-    "react-use-observable": "https://github.com/danieloprado/react-use-observable",
-    "rxjs": "6.5.3"
+    "react-use-observable": "1.0.1",
+    "rxjs": "6.5.5",
+    "yup": "0.28.4"
   },
   "devDependencies": {
-    "@babel/plugin-transform-runtime": "7.7.4",
+    "@babel/plugin-transform-runtime": "7.9.0",
     "@types/base-64": "0.1.3",
     "@types/inquirer": "6.5.0",
-    "@types/lodash": "4.14.149",
-    "@types/node": "12.12.14",
+    "@types/lodash": "4.14.150",
+    "@types/node": "13.13.0",
     "@types/prop-types": "15.7.3",
-    "@types/react": "16.9.14",
-    "@types/react-native": "0.60.23",
-    "@types/react-native-vector-icons": "6.4.4",
-    "@types/react-navigation": "3.4.0",
+    "@types/react": "16.9.34",
+    "@types/react-native": "0.62.2",
+    "@types/react-native-vector-icons": "6.4.5",
     "@types/validatorjs": "3.15.0",
-    "@typescript-eslint/eslint-plugin": "2.10.0",
-    "@typescript-eslint/parser": "2.10.0",
-    "babel-eslint": "10.0.3",
-    "babel-plugin-module-resolver": "3.2.0",
+    "@types/yup": "0.26.37",
+    "@typescript-eslint/eslint-plugin": "2.28.0",
+    "@typescript-eslint/parser": "2.28.0",
+    "babel-eslint": "10.1.0",
+    "babel-plugin-module-resolver": "4.0.0",
     "babel-plugin-transform-remove-console": "6.9.4",
-    "concurrently": "5.0.0",
-    "eslint": "6.7.2",
-    "eslint-config-prettier": "6.7.0",
-    "eslint-plugin-prettier": "3.1.1",
-    "eslint-plugin-react": "7.17.0",
-    "eslint-plugin-react-hooks": "2.3.0",
+    "concurrently": "5.1.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-prettier": "3.1.3",
+    "eslint-plugin-react": "7.19.0",
+    "eslint-plugin-react-hooks": "3.0.0",
     "eslint-plugin-react-native": "3.8.1",
-    "husky": "3.1.0",
-    "inquirer": "7.0.0",
-    "metro-react-native-babel-preset": "0.57.0",
+    "husky": "4.2.5",
+    "inquirer": "7.1.0",
+    "metro-react-native-babel-preset": "0.59.0",
     "ora": "4.0.3",
-    "prettier": "1.19.1",
+    "prettier": "2.0.4",
     "react-native-flash-message": "0.1.15",
-    "react-native-popup-menu": "0.15.6",
+    "react-native-popup-menu": "0.15.7",
     "react-native-typescript-transformer": "1.2.13",
-    "rimraf": "3.0.0",
-    "typescript": "3.7.2"
+    "rimraf": "3.0.2",
+    "typescript": "3.8.3"
   },
   "resolutions": {
-    "react": "16.12.0"
+    "react": "16.13.1"
   }
 }
